added word embedding

--- a/DSR_41_Introduction_NLP_deeplearning.ipynb
+++ b/DSR_41_Introduction_NLP_deeplearning.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "E816THZAll-m"
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "MSUADsNupMBM"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Ha0UkaBYpXVb",
         "colab": {
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "ghJ2jLzVqPqc"
       },
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Sk4FWA8rwnI1"
       },
@@ -386,8 +386,7 @@
         "lengths = []\n",
         "for x, _ in datasets_train_original:\n",
         "  length = len(x.numpy().decode('utf-8').split())\n",
-        "  lengths.append(length)\n",
-        ""
+        "  lengths.append(length)\n"
       ]
     },
     {
@@ -404,7 +403,7 @@
         "id": "cl0OVbazISH9",
         "outputId": "f6c6ea11-12d4-411f-c9ba-618cfcfd4d32"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -441,7 +440,7 @@
         "id": "UT_vjHgSI53_",
         "outputId": "0233136c-2873-41f1-ad4c-70643f2ed8b9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +471,7 @@
         "id": "jPJBTxSKPEj4",
         "outputId": "9a1901b5-86b2-4e2a-f053-3e5d9cf53463"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -503,7 +502,7 @@
       "metadata": {
         "id": "Ax_uLBGNOG98"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -518,7 +517,7 @@
         "id": "9ci0mK1pauHc",
         "outputId": "61424ae5-dc69-4a6c-ef7a-2321e2ff71a6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +543,7 @@
         "id": "vvNTyee6VDVs",
         "outputId": "4b2c8445-7dd3-4271-f141-c03d9f4ece66"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +566,7 @@
         "id": "tFkZDTzdVGhx",
         "outputId": "c7e550af-31fc-4670-f8c7-49eca3eb4a99"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +583,7 @@
       "metadata": {
         "id": "0g0BsQtkWSOx"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +599,7 @@
       "metadata": {
         "id": "YfiTrPgbcyle"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +619,7 @@
       "metadata": {
         "id": "ganWGFLGtE7D"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -666,7 +665,7 @@
         "id": "Zyxih-bRc8B7",
         "outputId": "69d34e7e-4422-4d19-80e6-125602eae778"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -808,7 +807,7 @@
         "id": "mcjEbOBLf0bh",
         "outputId": "3599dc12-43ee-40e6-bd94-f4de725a7411"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -863,7 +862,7 @@
       "metadata": {
         "id": "jv_tz61mzzBj"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -878,7 +877,7 @@
         "id": "hasVHb7ysYsu",
         "outputId": "ca4a9f2e-8486-4802-eebe-d1c070c680b8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +900,7 @@
         "id": "4p_zAWNu3GRD",
         "outputId": "067c5a7c-188a-47ad-e767-7b97e097cbef"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +929,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "model = models.Sequential()\n",
+        "model.add(encoder)\n",
+        "model.add(layers.Embedding(input_dim=vocabulary_size, output_dim=32))\n",
+        "model.add(layers.Reshape((2048,)))\n",
+        "model.add(layers.Dense(32, activation=\"relu\"))\n",
+        "model.add(layers.Dense(1, activation=\"sigmoid\"))\n",
+        "model.build(input_shape=(None,))\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(\n",
+        "    optimizer=\"adam\",\n",
+        "    loss=\"binary_crossentropy\",\n",
+        "    metrics=[\"accuracy\"]\n",
+        ")\n",
+        "\n",
+        "#print(model.evaluate(dataset_test))\n",
+        "\n",
+        "history = model.fit(\n",
+        "    dataset_train,\n",
+        "    epochs=10,\n",
+        "    validation_data=dataset_validate\n",
+        ")\n",
+        "\n",
+        "render_history(history.history)"
       ],
       "metadata": {
         "id": "oz1lgeak3ZxK"
@@ -942,7 +964,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXhEkHURDt4NK9aTVuAlX6",
+      "authorship_tag": "ABX9TyPbDR/gK8hh5/Cg2JbfNh4y",
       "include_colab_link": true
     },
     "kernelspec": {
