--- a/DSR_41_LSTM.ipynb
+++ b/DSR_41_LSTM.ipynb
@@ -186,46 +186,51 @@
         "model = models.Sequential()\n",
         "model.add(encoder)\n",
         "model.add(layers.Embedding(vocabulary_size, 32))\n",
-        "model.add(layers.LSTM(64))\n",
+        "#model.add(layers.LSTM(64))\n",
+        "model.add(layers.LSTM(64 ,return_sequences = True )) # get all outputs\n",
+        "model.add(layers.LSTM(128 ,return_sequences = True )) # get all outputs\n",
+        "model.add(layers.LSTM(256 )) # get all outputs\n",
+        "\n",
+        "\n",
         "model.add(layers.Dense(1,activation='sigmoid'))\n",
         "model.build(input_shape=(None,))\n",
         "model.summary()\n",
         "\n",
         "\n",
-        "model.compile(\n",
+        "# model.compile(\n",
         "\n",
-        "              optimizer = 'adam',\n",
-        "              loss='binary_crossentropy',\n",
-        "              metrics=['accuracy']\n",
-        ")\n",
+        "#               optimizer = 'adam',\n",
+        "#               loss='binary_crossentropy',\n",
+        "#               metrics=['accuracy']\n",
+        "# )\n",
         "\n",
         "\n",
-        "history = model.fit(\n",
+        "# history = model.fit(\n",
         "\n",
-        "                    dataset_train,\n",
-        "                    epochs = 10,\n",
-        "                    validation_data = dataset_validate\n",
+        "#                     dataset_train,\n",
+        "#                     epochs = 10,\n",
+        "#                     validation_data = dataset_validate\n",
         "\n",
-        ")"
+        "# )"
       ],
       "metadata": {
         "id": "uVteSDRyaNhf",
-        "outputId": "ca8d9a04-58ef-474d-defc-14d272888078",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 626
-        }
+          "height": 346
+        },
+        "outputId": "7a8e48b8-34f6-4d60-a5e9-3e5f08e8503f"
       },
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1mModel: \"sequential_2\"\u001b[0m\n"
+              "\u001b[1mModel: \"sequential_8\"\u001b[0m\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_2\"</span>\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_8\"</span>\n",
               "</pre>\n"
             ]
           },
@@ -241,11 +246,15 @@
               "│ text_vectorization                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m)                 │               \u001b[38;5;34m0\u001b[0m │\n",
               "│ (\u001b[38;5;33mTextVectorization\u001b[0m)                  │                             │                 │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ embedding_2 (\u001b[38;5;33mEmbedding\u001b[0m)              │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │         \u001b[38;5;34m320,000\u001b[0m │\n",
+              "│ embedding_8 (\u001b[38;5;33mEmbedding\u001b[0m)              │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │         \u001b[38;5;34m320,000\u001b[0m │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ lstm_2 (\u001b[38;5;33mLSTM\u001b[0m)                        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)                  │          \u001b[38;5;34m24,832\u001b[0m │\n",
+              "│ lstm_12 (\u001b[38;5;33mLSTM\u001b[0m)                       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m, \u001b[38;5;34m64\u001b[0m)             │          \u001b[38;5;34m24,832\u001b[0m │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                      │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1\u001b[0m)                   │              \u001b[38;5;34m65\u001b[0m │\n",
+              "│ lstm_13 (\u001b[38;5;33mLSTM\u001b[0m)                       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m, \u001b[38;5;34m128\u001b[0m)            │          \u001b[38;5;34m98,816\u001b[0m │\n",
+              "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
+              "│ lstm_14 (\u001b[38;5;33mLSTM\u001b[0m)                       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m256\u001b[0m)                 │         \u001b[38;5;34m394,240\u001b[0m │\n",
+              "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
+              "│ dense_4 (\u001b[38;5;33mDense\u001b[0m)                      │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1\u001b[0m)                   │             \u001b[38;5;34m257\u001b[0m │\n",
               "└──────────────────────────────────────┴─────────────────────────────┴─────────────────┘\n"
             ],
             "text/html": [
@@ -255,11 +264,15 @@
               "│ text_vectorization                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)                 │               <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
               "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">TextVectorization</span>)                  │                             │                 │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ embedding_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)              │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">320,000</span> │\n",
+              "│ embedding_8 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)              │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">320,000</span> │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ lstm_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                        │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)                  │          <span style=\"color: #00af00; text-decoration-color: #00af00\">24,832</span> │\n",
+              "│ lstm_12 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)             │          <span style=\"color: #00af00; text-decoration-color: #00af00\">24,832</span> │\n",
               "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
-              "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                      │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                   │              <span style=\"color: #00af00; text-decoration-color: #00af00\">65</span> │\n",
+              "│ lstm_13 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)            │          <span style=\"color: #00af00; text-decoration-color: #00af00\">98,816</span> │\n",
+              "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
+              "│ lstm_14 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)                 │         <span style=\"color: #00af00; text-decoration-color: #00af00\">394,240</span> │\n",
+              "├──────────────────────────────────────┼─────────────────────────────┼─────────────────┤\n",
+              "│ dense_4 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                      │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                   │             <span style=\"color: #00af00; text-decoration-color: #00af00\">257</span> │\n",
               "└──────────────────────────────────────┴─────────────────────────────┴─────────────────┘\n",
               "</pre>\n"
             ]
@@ -270,10 +283,10 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m344,897\u001b[0m (1.32 MB)\n"
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m838,145\u001b[0m (3.20 MB)\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">344,897</span> (1.32 MB)\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">838,145</span> (3.20 MB)\n",
               "</pre>\n"
             ]
           },
@@ -283,10 +296,10 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m344,897\u001b[0m (1.32 MB)\n"
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m838,145\u001b[0m (3.20 MB)\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">344,897</span> (1.32 MB)\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">838,145</span> (3.20 MB)\n",
               "</pre>\n"
             ]
           },
@@ -304,32 +317,6 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m79s\u001b[0m 94ms/step - accuracy: 0.5674 - loss: 0.6742 - val_accuracy: 0.5527 - val_loss: 0.6971\n",
-            "Epoch 2/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m71s\u001b[0m 90ms/step - accuracy: 0.6184 - loss: 0.6443 - val_accuracy: 0.7402 - val_loss: 0.5759\n",
-            "Epoch 3/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m67s\u001b[0m 86ms/step - accuracy: 0.7380 - loss: 0.5381 - val_accuracy: 0.7839 - val_loss: 0.4995\n",
-            "Epoch 4/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 93ms/step - accuracy: 0.8271 - loss: 0.4258 - val_accuracy: 0.7881 - val_loss: 0.4892\n",
-            "Epoch 5/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m80s\u001b[0m 90ms/step - accuracy: 0.8627 - loss: 0.3597 - val_accuracy: 0.7881 - val_loss: 0.5277\n",
-            "Epoch 6/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m67s\u001b[0m 85ms/step - accuracy: 0.8818 - loss: 0.3176 - val_accuracy: 0.8099 - val_loss: 0.4693\n",
-            "Epoch 7/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m67s\u001b[0m 85ms/step - accuracy: 0.9016 - loss: 0.2733 - val_accuracy: 0.8076 - val_loss: 0.4749\n",
-            "Epoch 8/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m70s\u001b[0m 89ms/step - accuracy: 0.9174 - loss: 0.2267 - val_accuracy: 0.8057 - val_loss: 0.5539\n",
-            "Epoch 9/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m68s\u001b[0m 86ms/step - accuracy: 0.9355 - loss: 0.1833 - val_accuracy: 0.8049 - val_loss: 0.5190\n",
-            "Epoch 10/10\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m69s\u001b[0m 88ms/step - accuracy: 0.9508 - loss: 0.1480 - val_accuracy: 0.8017 - val_loss: 0.5854\n"
-          ]
         }
       ]
     },
@@ -339,12 +326,12 @@
         "render_history (history)"
       ],
       "metadata": {
-        "id": "OHTzMnp1c85e",
-        "outputId": "b6771465-2951-425f-a659-9d9fc382a29a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 887
-        }
+        },
+        "id": "OHTzMnp1c85e",
+        "outputId": "b6771465-2951-425f-a659-9d9fc382a29a"
       },
       "execution_count": 12,
       "outputs": [
