--- a/Autoregression.ipynb
+++ b/Autoregression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1U+NegMg7pbaUeYGYnZ4O",
+      "authorship_tag": "ABX9TyNYge8+CbNLDaTwzyN4glMI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Hu3sfOdTBjVY"
       },
@@ -43,6 +43,102 @@
         "from tensorflow.keras import models, layers\n",
         "from tqdm import tqdm"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Where the text files are going to live.\n",
+        "dataset_path = \"dataset\"\n",
+        "dataset_path_all = os.path.join(dataset_path, \"all\")\n",
+        "dataset_path_train = os.path.join(dataset_path, \"train\")\n",
+        "dataset_path_valid = os.path.join(dataset_path, \"valid\")\n",
+        "\n",
+        "# Just use 20 files.\n",
+        "file_number = 20\n",
+        "\n",
+        "# Gather the corpus if it has not been gathered yet.\n",
+        "if not os.path.exists(dataset_path):\n",
+        "\n",
+        "    # Create all the folders.\n",
+        "    for path in [dataset_path, dataset_path_all, dataset_path_train, dataset_path_valid]:\n",
+        "        if not os.path.exists(path):\n",
+        "            os.mkdir(path)\n",
+        "\n",
+        "    # Clone the repo.\n",
+        "    !git clone https://github.com/vilmibm/lovecraftcorpus\n",
+        "\n",
+        "    # Find all the files.\n",
+        "    paths_all = glob.glob(\"lovecraftcorpus/*.txt\")\n",
+        "    print(sorted(paths_all))\n",
+        "\n",
+        "    # Standardize.\n",
+        "    for path in paths_all:\n",
+        "        content = open(path).read()\n",
+        "        content = content.lower()\n",
+        "        for punctuation in \".,:;?!\":\n",
+        "            content = content.replace(punctuation, \" \" + punctuation)\n",
+        "        open(path, \"w\").write(content)\n",
+        "\n",
+        "    # Do not use all.\n",
+        "    paths_all = paths_all[:file_number]\n",
+        "\n",
+        "    # Split 80/20.\n",
+        "    split_index = int(len(paths_all) * 0.8)\n",
+        "    paths_train = paths_all[:split_index]\n",
+        "    paths_valid = paths_all[split_index:]\n",
+        "\n",
+        "    # Copy files.\n",
+        "    def copy(paths, destination):\n",
+        "        for path in paths:\n",
+        "            shutil.copy2(path, destination)\n",
+        "    copy(paths_all, dataset_path_all)\n",
+        "    copy(paths_train, dataset_path_train)\n",
+        "    copy(paths_valid, dataset_path_valid)\n",
+        "\n",
+        "    # Delete repo.\n",
+        "    !rm -rf lovecraftcorpus\n",
+        "\n",
+        "    # Done.\n",
+        "    print(\"Corpus downloaded.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IaN53LpdBuP1",
+        "outputId": "2a64efc5-a4a2-44d2-9477-2453238ca729"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'lovecraftcorpus'...\n",
+            "remote: Enumerating objects: 74, done.\u001b[K\n",
+            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 74 (delta 0), reused 3 (delta 0), pack-reused 70 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (74/74), 1.12 MiB | 3.27 MiB/s, done.\n",
+            "['lovecraftcorpus/alchemist.txt', 'lovecraftcorpus/arthur_jermyn.txt', 'lovecraftcorpus/azathoth.txt', 'lovecraftcorpus/beast.txt', 'lovecraftcorpus/beyond_wall_of_sleep.txt', 'lovecraftcorpus/book.txt', 'lovecraftcorpus/celephais.txt', 'lovecraftcorpus/charles_dexter_ward.txt', 'lovecraftcorpus/clergyman.txt', 'lovecraftcorpus/colour_out_of_space.txt', 'lovecraftcorpus/cool_air.txt', 'lovecraftcorpus/crawling_chaos.txt', 'lovecraftcorpus/cthulhu.txt', 'lovecraftcorpus/dagon.txt', 'lovecraftcorpus/descendent.txt', 'lovecraftcorpus/doorstep.txt', 'lovecraftcorpus/dreams_in_the_witch.txt', 'lovecraftcorpus/dunwich.txt', 'lovecraftcorpus/erich_zann.txt', 'lovecraftcorpus/ex_oblivione.txt', 'lovecraftcorpus/festival.txt', 'lovecraftcorpus/from_beyond.txt', 'lovecraftcorpus/gates_of_silver_key.txt', 'lovecraftcorpus/haunter.txt', 'lovecraftcorpus/he.txt', 'lovecraftcorpus/high_house_mist.txt', 'lovecraftcorpus/hound.txt', 'lovecraftcorpus/hypnos.txt', 'lovecraftcorpus/innsmouth.txt', 'lovecraftcorpus/iranon.txt', 'lovecraftcorpus/juan_romero.txt', 'lovecraftcorpus/kadath.txt', 'lovecraftcorpus/lurking_fear.txt', 'lovecraftcorpus/martins_beach.txt', 'lovecraftcorpus/medusas_coil.txt', 'lovecraftcorpus/memory.txt', 'lovecraftcorpus/moon_bog.txt', 'lovecraftcorpus/mountains_of_madness.txt', 'lovecraftcorpus/nameless.txt', 'lovecraftcorpus/nyarlathotep.txt', 'lovecraftcorpus/old_folk.txt', 'lovecraftcorpus/other_gods.txt', 'lovecraftcorpus/outsider.txt', 'lovecraftcorpus/pharoahs.txt', 'lovecraftcorpus/pickman.txt', 'lovecraftcorpus/picture_house.txt', 'lovecraftcorpus/poetry_of_gods.txt', 'lovecraftcorpus/polaris.txt', 'lovecraftcorpus/randolph_carter.txt', 'lovecraftcorpus/rats_walls.txt', 'lovecraftcorpus/reanimator.txt', 'lovecraftcorpus/redhook.txt', 'lovecraftcorpus/sarnath.txt', 'lovecraftcorpus/shadow_out_of_time.txt', 'lovecraftcorpus/shunned_house.txt', 'lovecraftcorpus/silver_key.txt', 'lovecraftcorpus/street.txt', 'lovecraftcorpus/temple.txt', 'lovecraftcorpus/terrible_old_man.txt', 'lovecraftcorpus/tomb.txt', 'lovecraftcorpus/tree.txt', 'lovecraftcorpus/ulthar.txt', 'lovecraftcorpus/unnamable.txt', 'lovecraftcorpus/vault.txt', 'lovecraftcorpus/what_moon_brings.txt', 'lovecraftcorpus/whisperer.txt', 'lovecraftcorpus/white_ship.txt']\n",
+            "Corpus downloaded.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size  = 32  # not for SGD! This is a different batch size.\n",
+        "seed = 667\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QLn9Hi-UCGcs"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
