--- a/Autoregression.ipynb
+++ b/Autoregression.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPFaUXwtETdHbdEObn1LcQi",
+      "authorship_tag": "ABX9TyNuOo8+RQmYZzsOgB9p/Kd5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1022,6 +1022,81 @@
       "source": [],
       "metadata": {
         "id": "wlBru3G-MgyQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Try with new dataset : Friends TV show\n"
+      ],
+      "metadata": {
+        "id": "zWowhTfjOpWU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install kagglehub\n"
+      ],
+      "metadata": {
+        "id": "GNirYmTtOsr2",
+        "outputId": "e58efeff-b319-491b-a1db-c583bfe65116",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: kagglehub in /usr/local/lib/python3.11/dist-packages (0.3.6)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from kagglehub) (24.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from kagglehub) (2.32.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from kagglehub) (4.67.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->kagglehub) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->kagglehub) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->kagglehub) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->kagglehub) (2025.1.31)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import kagglehub\n",
+        "import shutil\n",
+        "\n",
+        "# Define the folder where the dataset will be stored\n",
+        "output_folder = \"/content/friends_scripts\"\n",
+        "\n",
+        "# Ensure the directory exists\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "# Download the dataset\n",
+        "path = kagglehub.dataset_download(\"divyansh22/friends-tv-show-script\")\n",
+        "\n",
+        "print(\"✅ Dataset downloaded and saved in:\", path)\n",
+        "\n",
+        "# Copy all files from the source path to the destination\n",
+        "shutil.copytree(path, output_folder, dirs_exist_ok=True)"
+      ],
+      "metadata": {
+        "id": "rT-eC6WwOu2z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NZ3U3kXkOu0o"
       },
       "execution_count": null,
       "outputs": []
